src/test/ui/const-eval-overflow-2.stderr
error[E0080]: constant evaluation error
  --> $DIR/const-eval-overflow-2.rs:21:25
   |
21 | const NEG_NEG_128: i8 = -NEG_128;
   |                         ^^^^^^^^ miri failed: Overflow(Neg) at $DIR/const-eval-overflow-2.rs:21:25: 21:33
   |
note: for pattern here
  --> $DIR/const-eval-overflow-2.rs:26:9
   |
26 |         NEG_NEG_128 => println!("A"),
   |         ^^^^^^^^^^^

error: aborting due to previous error

